Add get users order endpoint
